Standardise CMake name for ark dev sdk to ark-dev-sdk to match repository name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ message(STATUS "DEBUG LEVEL = ${DEBUG}")
 
 include(FetchContent)
 FetchContent_Declare(
-    arkdevsdk
+    ark-dev-sdk
     GIT_REPOSITORY https://github.com/PSP-Arkfive/ark-dev-sdk.git
     GIT_TAG main
     EXCLUDE_FROM_ALL
@@ -18,9 +18,9 @@ FetchContent_Declare(
     GIT_TAG main
     EXCLUDE_FROM_ALL
 )
-FetchContent_MakeAvailable(arkdevsdk bootloadex)
+FetchContent_MakeAvailable(ark-dev-sdk bootloadex)
 
-set(ARKSDK ${arkdevsdk_SOURCE_DIR})
+set(ARKSDK ${ark-dev-sdk_SOURCE_DIR})
 
 add_prx_module(vitapopscompat exports.exp)
 
